refactor: reorganize project structure
- Move WebSocket server from frontend to backend directory
- Update package.json scripts for better developer experience
- Update README.md with new project structure and commands
- Remove redundant configuration files
- Maintain all functionality without code changes

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "frontend": "cd frontend && npm run dev",
-    "backend": "cd backend && echo \"No backend scripts available yet\""
+    "backend": "cd backend && npm start",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "devDependencies": {
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "concurrently": "^8.2.2"
   }
 }
